-*- Text -*-

XXX this needs much work, trolling through ChangeLogs.

Many, many, many bugs have been fixed, including some resource
consumption problems and race conditions.  The system can compile
itself as well as most external applications.  The amount of stress
the system can tolerate has increased a lot.

The new ftpfs translator can be used to transparently access FTP
servers through the filesystem.  Together with the new hostmux
translator, which can invoke host-specific translators like ftpfs,
this leads to a very comfortable way to use FTP archives on the Hurd.

A new translator usermux can invoke user specific translators. It can
be used to provide a symlink to all users home directories in a single
place (similar to amd/automount).

The tmpfs translator can be used to store files and directories in RAM
without any overhead of a real filesystem.  The amount of memory
allocated equals the amount of space occupied, and an upper limit can
be defined.

Shadow passwords are now supported.  If the password field in
/etc/passwd contains the string "x", the crypted password is looked up
in /etc/shadow instead.  A new password server distributes auth ports
after password verification.

The pfinet server uses the Linux 2.2.12 IP stack now.  It supports the
new interface types dummy and tun which provide a bottomless sink and
IP tunnel interface respectively.  It also supports all common network
ioctls now.

The Hurd can now access CD-ROMs containing an ISO9660 file format with
the new iso9660fs translator. Rock Ridge extensions are supported, as
well as some GNU extensions to store GNU specific file system
attributes in such filesystems.

Two new translators, hello and hello-mt, illustrate how to implement
simple trivfs based filesystems in the Hurd.

A new utility `rpctrace' aids in debugging the Hurd by listing all
invoked RPCs with message id and port right information.

The Hurd does no longer contain the utility `su', which is included in